--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href="https://acciojob.com/"></a>Home</li>
+			<li><a href="https://acciojob.com/mern-full-stack-development"></a>About Us</li>
+			<li><a href="https://acciojob.com/success-stories"></a>Contact Us</li>
+		</ul>
+	</nav>
+	<section>
+		<h2>Audio 1
+		<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"/>
+		</h2>
+		<h2>Audio 2
+		<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"/>
+		</h2>
+		<h2>Audio 3
+		<audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"/></h2>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
