--- a/main.html
+++ b/main.html
@@ -9,21 +9,21 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<nav>
-		<ul>
-			<li><a href="https://acciojob.com/"></a>Home</li>
-			<li><a href="https://acciojob.com/mern-full-stack-development"></a>About Us</li>
-			<li><a href="https://acciojob.com/success-stories"></a>Contact Us</li>
+		<ul type="none">
+			<li><a href="www.google.com"></a>Google</li>
+			<li><a href="www.facebook.com"></a>Facebook</li>
+			<li><a href="www.instagram.com"></a>Instagram</li>
 		</ul>
 	</nav>
 	<section>
-		<h2>Audio 1
-		<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"/>
-		</h2>
-		<h2>Audio 2
-		<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"/>
-		</h2>
-		<h2>Audio 3
-		<audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"/></h2>
+		<h1>3 random audios</h1>
+		<ol>
+			<li>Audio1
+				<audio type="audio/mp3" src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"></audio>
+			</li>
+			<li>Audio2<audio type="audio/ogg" src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li>
+			<li>Audio3<audio type="audio/mp3" src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio></li>
+		</ol>
 	</section>
     <script type="text/javascript" src="./script.js">
 </script>
