--- a/main.html
+++ b/main.html
@@ -19,10 +19,10 @@
 		<h1>3 random audios</h1>
 		<ol>
 			<li>Audio1
-				<audio type="audio/mp3" src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"></audio>
+				<audio controls type="audio/mp3" src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"></audio>
 			</li>
-			<li>Audio2<audio type="audio/ogg" src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li>
-			<li>Audio3<audio type="audio/mp3" src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio></li>
+			<li>Audio2<audio controls type="audio/ogg" src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li>
+			<li>Audio3<audio controls type="audio/mp3" src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio></li>
 		</ol>
 	</section>
     <script type="text/javascript" src="./script.js">
